<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <ListPreference
        android:defaultValue="@string/pref_units_default"
        android:dialogTitle="@string/pref_units_label"
        android:entries="@array/units_array"
        android:entryValues="@array/units_array"
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label" />

    <ListPreference
        android:defaultValue="@string/pref_radius_default"
        android:dialogTitle="@string/pref_radius_label"
        android:entries="@array/radius_array"
        android:entryValues="@array/radius_array"
        android:key="@string/pref_radius_key"
        android:title="@string/pref_radius_label" />

    <ListPreference
        android:defaultValue="@string/pref_interval_default"
        android:dialogTitle="@string/pref_interval_label"
        android:entries="@array/interval_array"
        android:entryValues="@array/interval_array"
        android:key="@string/pref_interval_key"
        android:title="@string/pref_interval_label" />

    <PreferenceCategory android:title="@string/pref_filter_label">
        <MultiSelectListPreference
            android:defaultValue="@array/category_array"
            android:dialogTitle="@string/pref_category_label"
            android:entries="@array/category_array"
            android:entryValues="@array/category_array"
            android:key="@string/pref_category_key"
            android:title="@string/pref_category_label" />

        <MultiSelectListPreference
            android:defaultValue="@array/rating_array"
            android:dialogTitle="@string/pref_category_label"
            android:entries="@array/rating_array"
            android:entryValues="@array/rating_array"
            android:key="@string/pref_rating_key"
            android:title="@string/pref_rating_label" />
    </PreferenceCategory>


</PreferenceScreen>
